<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scoutguide.AddCampsiteActivity" 
    android:orientation="vertical">
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_name"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/campsiteName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <TextView
            android:id="@+id/campsiteType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/campsite_type"
            android:layout_weight="3"
            android:textSize="24sp"/>
        <Spinner
            android:id="@+id/typeSpinner"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:entries="@array/type_array"/>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_city"
        android:textSize="24sp"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/campsiteCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_owner"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/campsiteOwner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_ownerTel"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/owner_tel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>



    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/campsite_capacity"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/campsite_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"/>
    <Spinner
        android:id="@+id/capacitySpinner"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:entries="@array/capacity_array"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:id="@+id/campsiteDistrict"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/campsite_district"
            android:layout_weight="3"
            android:textSize="24sp"/>
        <Spinner
            android:id="@+id/districtSpinner"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:entries="@array/district_array"/>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_remarks"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/campsiteRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/submit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/flat_selector"
      android:textColor="@android:color/white"
      android:text="@string/submit"
      android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
